streamlined the mcx implementation a bit

--- a/documentation/source/general/changelog/0.6.rst
+++ b/documentation/source/general/changelog/0.6.rst
@@ -8,7 +8,7 @@ Welcome to the latest update of Qrisp, our quantum computing programming languag
 Jasp
 ----
 
-Jasp is a submodule of Qrisp that allows you to scale up your Qrisp code to to previously unseen problem scales. The fundamental problem that many Python based quantum frameworks face is that the Python interpreter is slow compared to what is possible with compiled languages. As an example, a 35 bit modular in-place multiplication takes already ~20 seconds to compile in Qrisp. Considering typical RSA key sizes contain up to 2000 bits, compiling a circuit addressing practically relevant problem scales therefore seems unlikely. Note that this issue is not restricted to Qrisp but similar numbers can be observed for Qiskit or any other Python based quantum circuit SDK. Jasp addresses this problem by capturing the computation using `Jax <https://jax.readthedocs.io/en/latest/index.html>`_ infrastructure and subsequently compiling it to QIR using `Catalyst <https://docs.pennylane.ai/projects/catalyst/en/stable/index.html>`_ and established `LLVM infrastructure <https://mlir.llvm.org/>`_. Using this pipeline, Jasp achieves industrial grade compilation performance.
+Jasp is a submodule of Qrisp that allows you to scale up your Qrisp code to to previously unseen problem scales. The fundamental problem that many Python based quantum frameworks face is that the Python interpreter is slow compared to what is possible with compiled languages. As an example, a 35 bit modular in-place multiplication takes already ~20 seconds to compile in Qrisp. Considering typical RSA key sizes contain up to 2000 bits, compiling a circuit addressing practically relevant problem scales therefore seems unlikely. Note that this issue is not restricted to Qrisp but similar numbers can be observed for Qiskit or any other Python based quantum circuit SDK. Jasp addresses this by capturing the computation using `Jax <https://jax.readthedocs.io/en/latest/index.html>`_ infrastructure and subsequently compiling it to QIR using `Catalyst <https://docs.pennylane.ai/projects/catalyst/en/stable/index.html>`_ and established `LLVM infrastructure <https://mlir.llvm.org/>`_. Using this pipeline, Jasp achieves industrial grade compilation performance.
 
 Apart from the compilation scaling issues, many frameworks (Qrisp included) suffer from the inability to integrate classical real-time computations. What is a real-time computation? A classical computation that happens during the quantum computation, while the quantum computer stays in superposition. This computation has to happen much faster than the coherence time, so performing that computation by waiting for the Python interpreter to generate a new circuit is impossible. Real-time computations are essential for many techniques in error correction, such as syndrom decoding or magic state distillation. On the algorithmic level, real-time computations also become more popular since they are so much cheaper than the quantum equivalent. Examples are Gidney’s adder or repeat until success protocols like HHL. Real-time computations are deeply ingrained into the Jasp archictecture - anything that can be done with Jax can also be a real-time computation.
 
@@ -21,3 +21,4 @@ UI Changes
 
 * :ref:`QuantumFloats <QuantumFloat>` are now bitshifted by the **in-place** bitshift operators ``<<=`` and ``>>=``, which describes the behavior better then the previous out-of-place operators ``<<`` and ``>>``.
 * The in-place bit-shift Operator is now called :ref:`Injection operator <injection>` and facilitates in-place application of out-of-place functions.
+* The :ref:`mcx <mcx>` function no longer accepts lists and arbitrary :ref:`QuantumVariables <QuantumVariable>` as target. Target values have to be either :ref:`Qubit` or :ref:`QuantumBool`.
